Manual entry of items
Additionally, more beautifying and functionality updates